Crash in [@ mozilla::ipc::WriteIPDLParam<T> | mozilla::ipc::WriteIPDLParam<T> | mozilla::dom::PContentChild::SendWindowPostMessage]
Categories
(Core :: DOM: Navigation, defect, P1)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox71 | --- | unaffected |
firefox72 | --- | disabled |
firefox73 | --- | verified |
firefox74 | --- | disabled |
firefox75 | --- | verified |
People
(Reporter: mccr8, Assigned: mccr8)
References
(Blocks 1 open bug)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
This bug is for crash report bp-93c78c52-f3a3-4906-b43f-52f280191204.
Top 10 frames of crashing thread:
0 XUL void mozilla::ipc::WriteIPDLParam<mozilla::dom::BrowsingContext*> ipc/glue/IPDLParamTraits.h:60
1 XUL void mozilla::ipc::WriteIPDLParam<mozilla::dom::PostMessageData const&> ipc/glue/IPDLParamTraits.h:60
2 XUL mozilla::dom::PContentChild::SendWindowPostMessage ipc/ipdl/PContentChild.cpp:7544
3 XUL mozilla::dom::BrowsingContext::PostMessageMoz docshell/base/BrowsingContext.cpp:1092
4 XUL mozilla::dom::Window_Binding::postMessage dom/bindings/WindowBinding.cpp:3201
5 XUL bool mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::CrossOriginThisPolicy, mozilla::dom::binding_detail::ThrowExceptions> dom/bindings/BindingUtils.cpp:3153
6 @0x12c9ad58cf3f
7 @0x12d67e82f
8 @0x12c9ad58ccc2
9 @0x12cc0d3b7
This is another IsDiscarded crash I hit. I had a tab sitting open to a random wowhead.com page. That site loads a lot of junky iframes so maybe it was due to that somehow.
MOZ_RELEASE_ASSERT(!aParam->IsDiscarded()) (Cannot send discarded BrowsingContext between processes!)
Assignee | ||
Updated•1 year ago
|
Updated•1 year ago
|
Assignee | ||
Updated•1 year ago
|
Assignee | ||
Updated•1 year ago
|
Assignee | ||
Comment 1•1 year ago
|
||
The STR I used is to go to https://www.wowhead.com/item=44982/enchanted-broom#comments and wait. Also, sometimes I tried opening another tab for wowhead.com and closing it. I've reproduce it 3 times with that method, but it isn't entirely consistent. I suspect whether it reproduces or not depends on the ads you get.
Assignee | ||
Comment 2•1 year ago
|
||
Updated•1 year ago
|
Updated•1 year ago
|
Assignee | ||
Updated•1 year ago
|
Pushed by amccreight@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f32b9853cac0 Don't send a postMessage IPC message if the source BC has been discarded. r=farre
Comment 5•1 year ago
|
||
bugherder |
Updated•1 year ago
|
Updated•1 year ago
|
Comment 6•1 year ago
|
||
I have managed to reproduce this issue using Firefox 73.0a1 (BuildID: 20191204215924 ) on Windows 10 64bit -> bp-594c6a7c-a308-4efe-aa11-5f1110200210
I was not able to reproduce this issue using Firefox 75.0a1 (BuildId:20200210213347) and an old Firefox 73.0a1 (BuildId:20191212095326) using Window 10 64bit and Ubuntu 18.04 64bit.
Marking Fx 74 as disabled since this is a Fission specific issue.
Description
•