Bug 1601423 - Don't send a postMessage IPC message if the source BC has been discarded. r=farre

Differential Revision: https://phabricator.services.mozilla.com/D56615